// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Text should render highlighted words with highlightCaseSensitive 1`] = `
<div>
  <span
    class="components-truncate style-text style-highlighter-text components-text"
    data-wp-c16t="true"
    data-wp-component="Text"
    role="heading"
    style="--wp-components-text-font-size: calc((13 / 13) * 13px); --wp-components-text-font-weight: normal;"
  >
    <span
      class=""
    >
      Lorem ipsum.
    </span>
  </span>
</div>
`;

exports[`Text snapshot tests should render correctly 1`] = `
<div>
  <span
    class="components-truncate style-text components-text"
    data-wp-c16t="true"
    data-wp-component="Text"
    style="--wp-components-text-font-size: calc((13 / 13) * 13px); --wp-components-text-font-weight: normal;"
  >
    Lorem ipsum.
  </span>
</div>
`;
